--- a/sctnet/res/layout/about_activity.xml
+++ b/sctnet/res/layout/about_activity.xml
@@ -6,12 +6,42 @@
     android:background="@color/blue"
     android:gravity="center"
     android:orientation="vertical" >
+<RelativeLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <ImageView 
+                android:id="@+id/mcs_image"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="100dp"
+	            android:src="@drawable/logo2"
+            />
+             <TextView
+                android:id="@+id/version_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/mcs_image"
+                android:layout_toRightOf="@+id/mcs_image"
+                android:layout_marginBottom="7dp"
+                android:text="四川人才网"
+                android:textColor="@color/white"
+                android:textSize="12.28dp" />
+            <TextView 
+                android:id="@+id/version_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/mcs_image"
+                android:layout_marginBottom="25dp"
+                android:textSize="10dp"
+                android:textColor="@color/white"
+                android:layout_above="@+id/version_name"
+                />
 
-    <ImageView 
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo2"
-        />
+           
+            
+        </RelativeLayout>
+    
     
     <TextView 
         android:layout_width="match_parent"
