--- a/sctnet/res/layout/archives_query_activity.xml
+++ b/sctnet/res/layout/archives_query_activity.xml
@@ -132,36 +132,7 @@
         -->
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/login_relative_layout2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15.0dip"
-        android:layout_marginRight="15.0dip"
-        android:layout_marginTop="10.0dip"
-        android:paddingBottom="10.0dip" >
-
-        <CheckBox
-            android:id="@+id/login_remember_password"
-            style="@style/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dip"
-            android:paddingLeft="20dip"
-            android:text="@string/remember_password" />
-
-        <CheckBox
-            android:id="@+id/login_auto_login"
-            style="@style/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dip"
-            android:paddingLeft="20dip"
-            android:text="@string/auto_login" />
-    </RelativeLayout>
-
+   
     <Button
         android:id="@+id/login_btn_login"
         android:layout_width="fill_parent"
@@ -180,15 +151,14 @@
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
-    <Button
+    <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginRight="20dip"
         android:layout_marginTop="30dip"
-        android:background="#00000000"
         android:text="@string/registerNow"
-        android:textColor="@drawable/btn_text_color" />
+        android:textColor="@color/lightBlack" />
 
 </LinearLayout>
