--- a/sctnet/res/layout/information_detail.xml
+++ b/sctnet/res/layout/information_detail.xml
@@ -16,7 +16,8 @@
        >
        <LinearLayout 
            android:layout_width="match_parent"
-           android:layout_height="wrap_content">
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -24,7 +25,10 @@
        <TextView 
            android:id="@+id/information_detail_text"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"/>
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:textSize="16dp"
+           />
        </LinearLayout>
 </ScrollView>
 </LinearLayout>
