--- a/sctnet/res/layout/information_list_item.xml
+++ b/sctnet/res/layout/information_list_item.xml
@@ -11,6 +11,8 @@
         android:id="@+id/little_column_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:textColor="#000000"
         android:padding="10dp"/>
 
     <ImageView
@@ -19,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/arrow" />
 
 </RelativeLayout>
