--- a/sctnet/res/layout/information_list_more_activity.xml
+++ b/sctnet/res/layout/information_list_more_activity.xml
@@ -8,11 +8,10 @@
     <ListView
         android:id="@+id/information_list"   
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
         android:divider="@color/background"
         android:dividerHeight="1dp" 
-        android:layout_marginBottom="40dp"
         />
     
 
