--- a/sctnet/res/layout/archives_query_activity.xml
+++ b/sctnet/res/layout/archives_query_activity.xml
@@ -24,141 +24,99 @@
         android:paddingTop="21.0dip" >
 
         <LinearLayout
+            android:id="@+id/true_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:gravity="center_vertical"
             android:background="@drawable/linear_layout"
             android:orientation="horizontal" >
 
+            <TextView
+                android:id="@+id/true_name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColor="@color/lightBlack"
+                android:text="姓       名" />
             <EditText
-                android:id="@+id/login_edit_username"
+                android:id="@+id/true_name_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@null"
-                android:drawableLeft="@drawable/icon1"
-                android:drawablePadding="10dp"
-                android:hint="@string/username_hint"
+                android:textSize="15dp"
+                android:hint="请输入您的真实姓名"
                 android:padding="10dp" />
         </LinearLayout>
         
         
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/linear_layout"
-            android:orientation="horizontal" >
-
-            <EditText
-                android:id="@+id/login_edit_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:background="@null"
-                android:drawableLeft="@drawable/icon1"
-                android:drawablePadding="10dp"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:padding="10dp" />
-        </LinearLayout>
-
-        
-
-        <!--
-        <EditText
-            android:id="@+id/login_edit_username"
+        <RelativeLayout
+            android:id="@+id/birthday"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="5.0dip"
-            android:layout_marginLeft="5.0dip"
-            android:layout_marginRight="5.0dip"
-            android:layout_marginTop="10.0dip"
-            android:background="@drawable/common_edit"
-            android:hint="@string/username_hint"
-            android:maxLength="20"
-            android:paddingLeft="80.0dip"
-            android:saveEnabled="true"
-            android:singleLine="true" />
-
-        <TextView
-            android:id="@+id/login_tv_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/login_edit_username"
-            android:layout_alignLeft="@+id/login_edit_username"
-            android:layout_alignTop="@+id/login_edit_username"
-            android:layout_marginRight="15.0dip"
+            android:layout_height="55dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/item_selector"
+            android:layout_below="@+id/true_name"
             android:gravity="center_vertical"
-            android:paddingLeft="15.0dip"
-            android:paddingRight="15.0dip"
-            android:text="@string/username_label"
-            android:textColor="#FF000000"
-            android:textSize="20.0dip" />
+            android:orientation="horizontal" >
 
-        <EditText
-            android:id="@+id/login_edit_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/login_edit_username"
-            android:layout_alignRight="@+id/login_edit_username"
-            android:layout_below="@+id/login_edit_username"
-            android:layout_marginRight="1.0dip"
-            android:layout_marginTop="15.0dip"
-            android:background="@drawable/common_edit"
-            android:hint="@string/password_hint"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:paddingLeft="80.0dip"
-            android:saveEnabled="true" />
+            <TextView
+                android:id="@+id/birthday_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColor="@color/lightBlack"
+                android:text="出生日期" />
 
-        <TextView
-            android:id="@+id/login_tv_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/login_edit_password"
-            android:layout_alignRight="@+id/login_tv_username"
-            android:layout_alignTop="@+id/login_edit_password"
-            android:gravity="center_vertical"
-            android:paddingLeft="15.0dip"
-            android:paddingRight="15.0dip"
-            android:text="@string/password_label"
-            android:textColor="#FF000000"
-            android:textSize="20.0dip" />
-        -->
+            <TextView
+                android:id="@+id/birthday_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/birthday_text"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:hint="请选择您的出生日期"
+                android:text="" />
+
+            <ImageView
+                android:id="@+id/arrow2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@null"
+                android:shadowColor="#ffffffff"
+                android:shadowDx="0.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="1.0"
+                android:src="@drawable/arrow" >
+            </ImageView>
+        </RelativeLayout>
     </RelativeLayout>
 
    
     <Button
-        android:id="@+id/login_btn_login"
+        android:id="@+id/search_btn"
         android:layout_width="fill_parent"
         android:layout_height="45dip"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         android:background="@drawable/blue_button_selector"
         android:enabled="true"
         android:shadowColor="#7f000000"
         android:shadowDx="0.0"
         android:shadowDy="1.0"
         android:shadowRadius="1.0"
-        android:text="@string/login"
+        android:text="搜     索"
         android:textColor="#ffffff"
         android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dip"
-        android:layout_marginTop="30dip"
-        android:text="@string/registerNow"
-        android:textColor="@color/lightBlack" />
 
 </LinearLayout>
