--- a/sctnet/res/layout/job_list_item.xml
+++ b/sctnet/res/layout/job_list_item.xml
@@ -72,7 +72,7 @@
                 android:layout_toRightOf="@+id/degree"
                 android:text="|" />
 
-            <TextView
+           <!--  <TextView
                 android:id="@+id/workingYears"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_toRightOf="@+id/workingYears"
-                android:text="|" />
+                android:text="|" /> -->
 
             <TextView
                 android:id="@+id/workplace"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/divider2"
+                android:layout_toRightOf="@+id/divider1"
                 android:text="工作地区" />
         </RelativeLayout>
     </LinearLayout>
