--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -33,17 +33,17 @@
 
             <EditText
                 android:id="@+id/login_edit_username"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@null"
                 android:drawableLeft="@drawable/icon1"
                 android:drawablePadding="10dp"
                 android:hint="@string/username_hint"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:singleLine="true" />
         </LinearLayout>
-        
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
 
             <EditText
                 android:id="@+id/login_edit_password"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@null"
@@ -63,73 +63,9 @@
                 android:drawablePadding="10dp"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:singleLine="true" />
         </LinearLayout>
-
-        
-
-        <!--
-        <EditText
-            android:id="@+id/login_edit_username"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="5.0dip"
-            android:layout_marginLeft="5.0dip"
-            android:layout_marginRight="5.0dip"
-            android:layout_marginTop="10.0dip"
-            android:background="@drawable/common_edit"
-            android:hint="@string/username_hint"
-            android:maxLength="20"
-            android:paddingLeft="80.0dip"
-            android:saveEnabled="true"
-            android:singleLine="true" />
-
-        <TextView
-            android:id="@+id/login_tv_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/login_edit_username"
-            android:layout_alignLeft="@+id/login_edit_username"
-            android:layout_alignTop="@+id/login_edit_username"
-            android:layout_marginRight="15.0dip"
-            android:gravity="center_vertical"
-            android:paddingLeft="15.0dip"
-            android:paddingRight="15.0dip"
-            android:text="@string/username_label"
-            android:textColor="#FF000000"
-            android:textSize="20.0dip" />
-
-        <EditText
-            android:id="@+id/login_edit_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/login_edit_username"
-            android:layout_alignRight="@+id/login_edit_username"
-            android:layout_below="@+id/login_edit_username"
-            android:layout_marginRight="1.0dip"
-            android:layout_marginTop="15.0dip"
-            android:background="@drawable/common_edit"
-            android:hint="@string/password_hint"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:paddingLeft="80.0dip"
-            android:saveEnabled="true" />
-
-        <TextView
-            android:id="@+id/login_tv_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/login_edit_password"
-            android:layout_alignRight="@+id/login_tv_username"
-            android:layout_alignTop="@+id/login_edit_password"
-            android:gravity="center_vertical"
-            android:paddingLeft="15.0dip"
-            android:paddingRight="15.0dip"
-            android:text="@string/password_label"
-            android:textColor="#FF000000"
-            android:textSize="20.0dip" />
-        -->
     </RelativeLayout>
 
     <RelativeLayout
