--- a/sctnet/res/layout/job_intention_edit_activity.xml
+++ b/sctnet/res/layout/job_intention_edit_activity.xml
@@ -124,13 +124,14 @@
                 android:id="@+id/workmanner_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/arrow2"
+                android:layout_toLeftOf="@+id/arrow0"
                 android:gravity="right"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
 
             <ImageView
+                android:id="@+id/arrow0"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentRight="true"
