--- a/sctnet/res/layout/resume_edit_activity.xml
+++ b/sctnet/res/layout/resume_edit_activity.xml
@@ -25,6 +25,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:inputType="textNoSuggestions"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
