--- a/sctnet/res/layout/download_list_item.xml
+++ b/sctnet/res/layout/download_list_item.xml
@@ -2,69 +2,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/background"
+    android:background="@drawable/item_selector"
      >
         
          <LinearLayout 
              android:id="@+id/home_activity_onerow"
              android:layout_width="fill_parent"  
              android:layout_height="wrap_content"
-             android:layout_gravity="center_horizontal"  
+             android:layout_gravity="center_horizontal" 
+             android:gravity="center_vertical" 
              android:orientation="horizontal"
              
              >
-             <RelativeLayout 
-                 android:id="@+id/download1"
-                 android:layout_width="wrap_content"
-	             android:layout_height="wrap_content"
-	             android:layout_gravity="center_horizontal" 
-	             android:gravity="center"
-	             android:layout_weight="1">
+             
                   <ImageView 
 					        android:id="@+id/first_download"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"   
-					        android:background="@drawable/download_first_bg"
+					        android:background="@drawable/download_second_normal"
+					        android:paddingLeft="5dp"
 					        />
                   <TextView
 				            android:id="@+id/download_first_name"
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:layout_below="@+id/first_download"
 				            android:layout_marginTop="5dp"
 				            android:textColor="@color/black"
 				            android:textSize="16dp"
 				            android:text="新员工入职下载"
 				            />
                   
-             </RelativeLayout>
-         
-             <RelativeLayout 
-                 android:id="@+id/download2"
-                 android:layout_width="wrap_content"
-	             android:layout_height="wrap_content"
-	             android:layout_gravity="center_horizontal"
-	             android:gravity="center" 
-	             android:layout_weight="1">
-                  <ImageView 
-					        android:id="@+id/second_download"
-					        android:layout_width="wrap_content"
-					        android:layout_height="wrap_content"   
-					        android:background="@drawable/download_second_bg"
-					        />
-                   <TextView
-				            android:id="@+id/download_second_name"
-				            android:layout_width="wrap_content"
-				            android:layout_height="wrap_content"
-				            android:layout_below="@+id/second_download"
-				            android:layout_marginTop="5dp"
-				            android:textColor="@color/black"
-				            android:textSize="16dp"
-				            android:text="新员工入职下载"
-				            />
-             </RelativeLayout>        
-        
-        
+            
        
          </LinearLayout>
 
