--- a/sctnet/res/layout/footbar_layout.xml
+++ b/sctnet/res/layout/footbar_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginRight="1dp"
-        android:background="@drawable/job_apply"
+        android:background="@drawable/job_apply_bg"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginRight="1dp"
-        android:background="@drawable/job_apply"
+        android:background="@drawable/job_apply_bg"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@drawable/job_apply"
+        android:background="@drawable/job_apply_bg"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
