--- a/sctnet/res/layout/worksearch_activity.xml
+++ b/sctnet/res/layout/worksearch_activity.xml
@@ -88,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/search_title_label"
+            android:src="@drawable/report_curor"
             android:scaleType="matrix" />
     </RelativeLayout>
            
