现场招聘会详情

--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@null"
-                android:drawableLeft="@drawable/icon1"
+                android:drawableLeft="@drawable/user_name_img"
                 android:drawablePadding="10dp"
                 android:hint="@string/username_hint"
                 android:padding="10dp"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:background="@null"
-                android:drawableLeft="@drawable/icon1"
+                android:drawableLeft="@drawable/password_img"
                 android:drawablePadding="10dp"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
