--- a/sctnet/res/layout/register_activity.xml
+++ b/sctnet/res/layout/register_activity.xml
@@ -24,7 +24,7 @@
             android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
             android:maxLength="16"
             android:background="@null"
-            android:drawableLeft="@drawable/icon1"
+            android:drawableLeft="@drawable/user_name_img"
             android:drawablePadding="10dp"
             android:hint="@string/register_username_hint"
             android:padding="10dp" />
@@ -52,7 +52,7 @@
             android:layout_weight="6"
             android:maxLength="16"
             android:background="@null"
-            android:drawableLeft="@drawable/icon1"
+            android:drawableLeft="@drawable/password_img"
             android:drawablePadding="10dp"
             android:hint="@string/register_password_hint"
             android:inputType="textPassword"
@@ -81,7 +81,7 @@
             android:layout_weight="6"
             android:background="@null"
             android:maxLength="16"
-            android:drawableLeft="@drawable/icon1"
+            android:drawableLeft="@drawable/password_img"
             android:drawablePadding="10dp"
             android:hint="@string/register_repassword_hint"
             android:inputType="textPassword"
@@ -110,7 +110,7 @@
             android:layout_weight="6"
             android:background="@null"
             android:inputType="textEmailAddress"
-            android:drawableLeft="@drawable/icon1"
+            android:drawableLeft="@drawable/email_img"
             android:drawablePadding="10dp"
             android:hint="@string/register_email_hint"
             android:padding="10dp" />
