--- a/sctnet/res/layout/personal_profile_edit_activity.xml
+++ b/sctnet/res/layout/personal_profile_edit_activity.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_gravity="center_horizontal"
     android:background="@color/background"
     android:orientation="vertical" >
+<LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
     <TextView
         android:layout_width="match_parent"
@@ -52,5 +56,28 @@
         android:padding="10dp"
         android:textColor="#3B3B3B"
         android:textSize="16dp" />
+   <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/personalResume"
+        android:textColor="@color/blue"
+        android:textSize="16dp" />
+   <EditText
+        android:id="@+id/personalResume_edit"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="top"
+        android:maxLength="3000" 
+        android:background="@drawable/search_edittext_bg"
+        android:hint="@string/personalResume_hint"
+        android:padding="10dp"
+        android:textColor="#3B3B3B"
+        android:textSize="16dp" />
 
 </LinearLayout>
+</ScrollView>
